# scurl

./: Cargo.toml  README.md  install-macos.sh
.github/workflows/: release.yml
src/: cli.rs  main.rs  request.rs  utils.rs
