[package]
name = "scurl"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "stream"] }
clap = { version = "4.2", features = ["derive"] }
anyhow = { version = "1.0" }

[profile.release]
opt-level = 3      # for max performance
lto = true           # for link time optimization
codegen-units = 1    # for better optimizations
panic = "abort"      # for smaller binary
strip = true         # removing symbols