[package]
name = "scurl"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["client", "http1", "tcp", "stream"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"
console = "0.16.0"
once_cell = "1.17"
futures = "0.3"